Added ListOpenings on swagger file
